--- a/public/index.html
+++ b/public/index.html
@@ -10,26 +10,31 @@
     <meta name="audience" content="Experten" />
     <meta name="author" content="Rupert Bogensperger" />
     <meta name="copyright" content="Rupert Bogensperger" />
-    <meta name="description" content="Rupert Bogensperger, Full-Stack Development" />
-    <meta name="expires" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Rupert Bogensperger | cross platform app development on mobile devices and enterprise. JavaScript, TypeScript, HTML and CSS are my main techniques to develop for web. Further, I use programming languages like python, C# or Kotlin that targets the JVM, Android, JavaScript and Native."
+    />
     <meta name="page-topic" content="Computer" />
     <meta name="page-type" content="Private Homepage" />
     <meta name="publisher" content="Rupert Bogensperger" />
     <meta name="revisit-after" content="7 days" />
-    <meta name="robots" content="INDEX,FOLLOW" />
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta property="og:url" content="https://ru4ert.com/" />
     <meta property="og:image" content="https://ru4ert.com/apple-icon-180x180.png" />
+    <meta property="og:title" content="Rupert Bogensperger | Full Stack Developer & IT Expert" />
     <meta
-      property="og:title"
-      content="Rupert Bogensperger | official website and developer profile"
+      property="og:description"
+      content="Rupert Bogensperger | cross platform app development on mobile devices and enterprise. JavaScript, TypeScript, HTML and CSS are my main techniques to develop for web. Further, I use programming languages like python, C# or Kotlin that targets the JVM, Android, JavaScript and Native."
     />
-    <meta property="og:description" content="Rupert Bogensperger, Full-Stack Development" />
     <meta property="og:type" content="website" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/apple-icon-72x72.png" />
@@ -52,16 +57,7 @@
     <meta name="msapplication-TileImage" content="https://ru4ert.com/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Rupert Bogensperger | official website and developer profile</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P94KQ55J4M"></script>
-    <script>
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
-      gtag('config', 'G-P94KQ55J4M')
-    </script>
+    <title>Rupert Bogensperger | Full Stack Developer & IT Expert</title>
     <!-- Google Tag Manager -->
     <script>
       ;(function (w, d, s, l, i) {
