SEA page, Services page SEO optim

--- a/public/index.html
+++ b/public/index.html
@@ -5,30 +5,28 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta http-equiv="Reply-to" content="rupertbogensperger21@gmail.com" />
-    <meta http-equiv="content-Language" content="de" />
+    <meta http-equiv="content-Language" content="en" />
     <meta http-equiv="content-Type" content="text/html; utf-8" />
+
+    <title>Rupert Bogensperger | Full Stack Developer</title>
+    <meta property="og:title" content="Rupert Bogensperger | Full Stack Developer" />
+    <meta property="og:image" content="https://ru4ert.com/rupert_neu.jpg" />
+    <meta
+      property="og:description"
+      content="Rupert Bogensperger (m/20) originated in Austia is a Full Stack Developer. Currently he is working for Sixth Edition."
+    />
+    <meta property="og:url" content="https://ru4ert.com/" />
+    <meta property="og:type" content="website" />
+
     <meta name="audience" content="Experten" />
     <meta name="author" content="Rupert Bogensperger" />
     <meta name="copyright" content="Rupert Bogensperger" />
-    <meta
-      name="description"
-      content="Rupert Bogensperger | cross platform app development on mobile devices and enterprise. JavaScript, TypeScript, HTML and CSS are my main techniques to develop for web. Further, I use programming languages like python, C# or Kotlin that targets the JVM, Android, JavaScript and Native."
-    />
     <meta name="page-topic" content="Computer" />
     <meta name="page-type" content="Private Homepage" />
     <meta name="publisher" content="Rupert Bogensperger" />
     <meta name="revisit-after" content="7 days" />
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <meta property="og:url" content="https://ru4ert.com/" />
-    <meta property="og:image" content="https://ru4ert.com/apple-icon-180x180.png" />
-    <meta property="og:title" content="Rupert Bogensperger | Full Stack Developer & IT Expert" />
-    <meta
-      property="og:description"
-      content="Rupert Bogensperger | cross platform app development on mobile devices and enterprise. JavaScript, TypeScript, HTML and CSS are my main techniques to develop for web. Further, I use programming languages like python, C# or Kotlin that targets the JVM, Android, JavaScript and Native."
-    />
-    <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -54,10 +52,9 @@
     <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="https://ru4ert.com/ms-icon-144x144.png" />
+    <meta name="msapplication-TileImage" content="https://ru4ert.com/maskable_icon_x512.png" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Rupert Bogensperger | Full Stack Developer & IT Expert</title>
     <!-- Google Tag Manager -->
     <script>
       ;(function (w, d, s, l, i) {
