--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Reply-to" content="rupertbogensperger21@gmail.com" />
     <meta http-equiv="content-Language" content="en" />
     <meta http-equiv="content-Type" content="text/html; utf-8" />
+    <base href="https://ru4ert.com/" target="_blank" />
 
     <title>Rupert Bogensperger | Full Stack Developer</title>
     <meta property="og:title" content="Rupert Bogensperger | Full Stack Developer" />
