--- a/functions/app/public/index.html
+++ b/functions/app/public/index.html
@@ -72,7 +72,7 @@
     <!-- End Google Tag Manager -->
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <noscript>You need to enable JavaScript to run this app. 😅</noscript>
+    <div id="root" />
   </body>
 </html>
