--- a/functions/app/public/403.html
+++ b/functions/app/public/403.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>400 | Bad request.</title>
+    <title>403 | Forbidden.</title>
     <meta name="robots" content="noindex" />
 
     <style type="text/css">
@@ -58,7 +58,6 @@
       .go-back a:hover {
         border-color: #1b1a1a;
       }
-
       .brand {
         max-width: 300px;
       }
@@ -85,12 +84,10 @@
         ><img src="https://ru4ert.com/maskable_icon_x512.png" width="180" height="100"
       /></a>
 
-      <h2>400</h2>
-      <h1>Bad request.</h1>
+      <h2>403</h2>
+      <h1>Forbidden.</h1>
 
-      <p>
-        We’re sorry but something appears to be wrong with the request you made, please try again.
-      </p>
+      <p>We’re sorry but you don’t have permission to access this directory on this server.</p>
 
       <span class="go-back"><a href="/">Go back</a></span>
     </div>
