added gravatar icon

--- a/app/public/404.html
+++ b/app/public/404.html
@@ -80,7 +80,7 @@
   <body>
     <div class="container">
       <a href="https://ru4ert.com/" class="brand"
-      ><img src="https://ru4ert.com/maskable_icon_x512.png" 
+      ><img src="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=512&d=mp&r=g" 
       /></a>
 
       <h2>404</h2>
