--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=32" />
+    <link rel="apple-touch-icon" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=192&d=mp&r=g" />
     <meta http-equiv="Reply-to" content="rupertbogensperger21@gmail.com" />
     <meta http-equiv="content-Language" content="en" />
     <meta http-equiv="content-Type" content="text/html; utf-8" />
@@ -11,10 +11,7 @@
     <title>Rupert Bogensperger | Full Stack Developer</title>
     <meta property="og:title" content="Rupert Bogensperger | Full Stack Developer" />
     <meta property="og:image" content="https://ru4ert.com/rupert_neu.jpg" />
-    <meta
-      property="og:description"
-      content="Rupert Bogensperger (m/20) originated in Austia is a Full Stack Developer. Currently he is working for Sixth Edition."
-    />
+    <meta property="og:description" content="Rupert Bogensperger (m/20) originated in Austia is a Full Stack Developer. Currently he is working for Sixth Edition." />
     <meta property="og:url" content="https://ru4ert.com/" />
     <meta property="og:type" content="website" />
 
@@ -29,30 +26,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-icon-180x180.png" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="%PUBLIC_URL%/android-icon-192x192.png"
-    />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet" />
+    <link rel="apple-touch-icon" sizes="57x57" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=57&d=mp&r=g" />
+    <link rel="apple-touch-icon" sizes="60x60" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=60&d=mp&r=g" />
+    <link rel="apple-touch-icon" sizes="72x72" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=72&d=mp&r=g" />
+    <link rel="apple-touch-icon" sizes="76x76" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=76&d=mp&r=g" />
+    <link rel="apple-touch-icon" sizes="114x114" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=114&d=mp&r=g" />
+    <link rel="apple-touch-icon" sizes="120x120" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=120&d=mp&r=g" />
+    <link rel="apple-touch-icon" sizes="144x144" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=144&d=mp&r=g" />
+    <link rel="apple-touch-icon" sizes="152x152" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=152&d=mp&r=g" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=180&d=mp&r=g" />
+    <link rel="icon" type="image/png" sizes="192x192" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=192&d=mp&r=g" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=32&d=mp&r=g" />
+    <link rel="icon" type="image/png" sizes="96x96" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=96&d=mp&r=g" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=16&d=mp&r=g" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="https://ru4ert.com/maskable_icon_x512.png" />
+    <meta name="msapplication-TileImage" content="https://www.gravatar.com/avatar/a98495ef27eacd246572b931ac8dd6dc?s=512&d=mp&r=g" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Google Tag Manager -->
